ajustes creacion de cuerpo legal

--- a/src/app/pages/norms/articles/articles.component.html
+++ b/src/app/pages/norms/articles/articles.component.html
@@ -26,6 +26,16 @@
                     placeholder="Ingrese contenido">You always want to make sure that your fonts work well together and try to limit the number of fonts you use to three or less. Experiment and play around with the fonts that you already have in the software you're working with reputable font websites. </textarea>
             </div>
         </div>
+
+        <div class="col-lg-12">
+            <div class="mb-3">
+                <div class="form-check form-switch">
+                    <input class="form-check-input" type="checkbox" formControlName="tipoParte" role="switch" id="tipoParte" checked>
+                    <label class="form-check-label" for="tipoParte">Es una obligación</label>
+                </div>
+                
+            </div>
+        </div>
     </div>
   </div>
   </form>
