--- a/src/app/pages/norms/sub-articles/sub-articles.component.html
+++ b/src/app/pages/norms/sub-articles/sub-articles.component.html
@@ -19,27 +19,27 @@
 
       <div class="row g-4 mb-4">
         <div class="col-sm">
-            <h5 class="mb-1">Crear Sub Obligaciones</h5>
-            <p class="text-muted">Crea cada una de las sub obligaciones de la Obligación seleccionada</p>
+            <h5 class="mb-1">Crear Sub Artículos</h5>
+            <p class="text-muted">Crea cada una de las sub artículos de la Obligación seleccionada</p>
         </div>
         <div class="col-sm-auto">
-                <button type="button" class="btn btn-info btn-label waves-effect right waves-light" (click)="showAddSubArticle()">Agregar Sub Obligación<i class="ri-add-line label-icon align-middle fs-16"></i></button>
+                <button type="button" class="btn btn-info btn-label waves-effect right waves-light" (click)="showAddSubArticle()">Agregar Sub Artículo<i class="ri-add-line label-icon align-middle fs-16"></i></button>
         </div>
        </div>
 
        <div class="row g-4 mb-3">
-        <div style="min-height: 350px !important;" *ngIf="articulo.subarticulos.length == 0">
+        <div style="min-height: 350px !important;" *ngIf="articulo.articulos.length == 0">
             <div class="card" style="padding: 0px;">
                 
                 <div class="card-body">
                 <div style="text-align: center;width: 100%;font-size: 20px;" class="position-absolute top-50">
-                    Aún no ha creado sub obligaciones para esta Obligación
+                    Aún no ha creado sub artículos para esta Obligación
                 </div>
                 </div>
             </div>
         </div>
 
-        <div style="min-height: 350px !important;" *ngIf="articulo.subarticulos.length > 0">
+        <div style="min-height: 350px !important;" *ngIf="articulo.articulos.length > 0">
                                 
             <div class="d-md-flex justify-content-sm-end gap-2">
                 <div class="search-box" style="width: 20%;">
@@ -50,7 +50,7 @@
 
             <div style="padding: 0px;">
 
-                <ng-container *ngFor="let ar of articulo.subarticulos; let i = index;">
+                <ng-container *ngFor="let ar of articulo.articulos; let i = index;">
                 
                 <div class="list-group">
 
@@ -105,7 +105,7 @@
                                             <div class="col-lg-2 col">
                                                 <div class="row text-muted text-center">
                                                     <div class="col-12 border-end border-end-dashed">
-                                                        <h5 class="mb-1">{{ar.subarticulos ? ar.subarticulos.length : 0}}</h5>
+                                                        <h5 class="mb-1">{{ar.articulos ? ar.articulos.length : 0}}</h5>
                                                         <p class="text-muted mb-0">Sub-Artículos</p>
                                                     </div>
                                                 </div>
