--- a/src/app/pages/norms/norms.component.html
+++ b/src/app/pages/norms/norms.component.html
@@ -338,7 +338,7 @@
   
                       <div class="d-flex align-items-start gap-3 mt-4"  *ngIf="subArticles.length == 0">
                         <button type="button" class="btn btn-link text-decoration-none btn-label previestab" data-previous="pills-info-desc-tab" awPreviousStep><i class="ri-arrow-left-line label-icon align-middle fs-16 me-2"></i> Artículos</button>
-                        <button type="button" class="btn btn-success btn-label right ms-auto nexttab nexttab" data-nexttab="pills-success-tab" awNextStep  [disabled]="cuerpoLegal.articulos.length == 0"><i class="ri-arrow-right-line label-icon align-middle fs-16 ms-2"></i>Guardar y Salir</button>
+                        <button type="button" class="btn btn-success btn-label right ms-auto nexttab nexttab" data-nexttab="pills-success-tab" awNextStep  [disabled]="cuerpoLegal.articulos.length == 0" (click)="saveAllCuerpo()"><i class="ri-arrow-right-line label-icon align-middle fs-16 ms-2"></i>Guardar y Salir</button>
                     </div>
                 </aw-wizard-step>
               </aw-wizard>
