correccion creacion de usuarios

--- a/src/app/pages/extrapages/team/team.component.html
+++ b/src/app/pages/extrapages/team/team.component.html
@@ -446,7 +446,7 @@
 
                                 <div class="hstack gap-2 justify-content-end">
                                     <button type="button" class="btn btn-light" data-bs-dismiss="modal" (click)="modal.dismiss('Cross click')">Cerrar</button>
-                                    <button type="submit" class="btn btn-success" id="addNewMember" (click)="modal.dismiss('Cross click')">Agregar Usuario</button>
+                                    <button type="submit" class="btn btn-success" id="addNewMember">Agregar Usuario</button>
                                 </div>
                             </div>
                         </div>
