--- a/src/app/pages/norms/norms.component.html
+++ b/src/app/pages/norms/norms.component.html
@@ -71,7 +71,7 @@
                           </div>
                           <div class="col-lg-12">
                               <div class="mb-3">
-                                  <label class="form-label" for="gen-info-ministerio-input">Ministerio / Área legal</label>
+                                  <label class="form-label" for="gen-info-ministerio-input">Organismo Emisor</label>
                                   <input type="text" class="form-control" id="gen-info-ministerio-input"  formControlName="organismo" placeholder="Ministerio de medio ambiente">
                               </div>
                           </div>
@@ -132,7 +132,7 @@
                                 
                                 <div class="card" style="padding: 0px;">
                                 <div class="card-body">
-                                    <div style="text-align: center;width: 100%;font-size: 20px;" class="position-absolute top-50">
+                                    <div style="text-align: center;width: 100%;font-size: 20px;"><!--class="position-absolute top-50"-->
                                         Aún no ha creado artículos para este Cuerpo legal
                                     </div>
                                 </div>
@@ -298,7 +298,7 @@
                               <div style="min-height: 350px !important;">
                                   
                                   <div class="card-body">
-                                    <div style="text-align: center;width: 100%;font-size: 20px;" class="position-absolute top-50">
+                                    <div style="text-align: center;width: 100%;font-size: 20px;"><!-- class="position-absolute top-50"-->
                                         Aún no ha creado artículos para este {{subArticles.length > 0 ? 'Artículo' : 'Cuerpo legal'}}
                                     </div>
                                   </div>
